# ai-sessions-render

./: .gitattributes  .gitignore  ARCHITECTURE.md  JS-PORT-PLAN.md  README.md  SECURITY.md  conftest.py  pyproject.toml
.agents/skills/ai-sessions-render/agents/: openai.yaml
.claude/: ecc-tools.json  identity.json
.claude/homunculus/instincts/inherited/: ai-sessions-render-instincts.yaml
.claude/skills/ai-sessions-render/: SKILL.md
.codex/: AGENTS.md
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
aisr/: __init__.py  audit.py  build.py  cli.py  demo.py  ir.py  loaders.py  render_html.py  render_md.py  sanitize.py  verify.py
aisr/adapters/: __init__.py  chatgpt.py  claude.py  codex.py  gemini.py
aisr/themes/: claude.css
js/: README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
js/src/: audit.ts  cli.ts  demo.ts  index.ts  ir.ts  render_html.ts  render_md.ts  sanitize.ts  verify.ts
js/src/adapters/: chatgpt.ts  claude.ts  gemini.ts
js/test/: adapter-parity.test.ts  cli.test.ts  coverage-paths.test.ts  parity.test.ts  render-html.test.ts  render-md.test.ts  sanitize.test.ts  verify-audit.test.ts
js/test/fixtures/: render-parity.json  sanitize-parity.json
tests/: test_audit.py  test_build.py  test_chatgpt_adapter.py  test_claude_adapter.py  test_cli.py  test_codex_adapter.py  test_coverage_paths.py  test_gemini_adapter.py  test_render_html.py  test_render_md.py  test_sanitize.py  test_verify.py
tools/: gen-adapter-parity.py  gen-parity-fixture.py  gen-render-parity.py  gen-themes.py  gen-unicode-data.py
